# rain.subgraph-cli

./: .gitignore  Cargo.toml  flake.nix  result
.github/workflows/: build.yaml  test.yaml
src/: main.rs
src/cli/: mod.rs
src/subgraph/: mod.rs
src/subgraph/command/: mod.rs
src/subgraph/deploy/: mod.rs
tests/: string_quotes_serde_yaml.rs
